feature: added swagger and update docs
